--- a/macbook/polybar/modules.ini
+++ b/macbook/polybar/modules.ini
@@ -15,26 +15,22 @@
 
 [module/bspwm]
 type = internal/bspwm
-label-focused-font = 4
-label-occupied-font = 4
-label-urgent-font = 4
-label-empty-font = 4
+label-focused-font = 3
+label-occupied-font = 3
+label-urgent-font = 3
+label-empty-font = 3
 
-label-focused = 
-label-focused-padding = 1
+label-focused = " "
 label-focused-foreground = ${colors.blue}
 
-label-occupied = 
-label-occupied-padding = 1
+label-occupied = " "
 label-occupied-foreground = ${colors.blue}
 
-label-urgent = 
+label-urgent = " "
 label-urgent-background = ${colors.purple}
-label-urgent-padding = 1
 
-label-empty = 
+label-empty = " "
 label-empty-foreground = ${colors.blue}
-label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
