--- a/i3/config
+++ b/i3/config
@@ -28,7 +28,7 @@ smart_gaps on
 ##################
 
 bindsym $mod+Control+q kill
-bindsym --release Caps_Lock exec pkill -SIGRTMIN+10 i3blocks
+bindsym --release Caps_Lock exec --no-startup-id pkill -SIGRTMIN+10 i3blocks
 bindsym $mod+space exec --no-startup-id rofi -show drun -drun-display-format \{name\}
 bindsym $mod+Return exec kitty
 bindsym $mod+w exec firefox
