--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -112,6 +112,7 @@ dwindle {
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = slave
+    no_gaps_when_only = 1
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
