--- a/archbook/hypr/hyprlock.conf
+++ b/archbook/hypr/hyprlock.conf
@@ -13,21 +13,9 @@ general {
 # BACKGROUND
 background {
   monitor =
-  path = $HOME/.config/background
+  path = $HOME/Pictures/Wallpapers/1monitor/bonfire.jpg
   blur_passes = 0
   color = $base
-}
-
-# LAYOUT
-label {
-  monitor =
-  text = Layout: $LAYOUT
-  color = $text
-  font_size = 25
-  font_family = $font
-  position = 30, -30
-  halign = left
-  valign = top
 }
 
 # TIME
@@ -68,7 +56,7 @@ image {
 # INPUT FIELD
 input-field {
   monitor =
-  size = 300, 60
+  size = 60, 60
   outline_thickness = 4
   dots_size = 0.2
   dots_spacing = 0.2
@@ -76,9 +64,9 @@ input-field {
   outer_color = $accent
   inner_color = $surface0
   font_color = $text
-  fade_on_empty = false
-  placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
-  hide_input = false
+  fade_on_empty = true
+  # placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
+  hide_input = true
   check_color = $accent
   fail_color = $red
   fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
