--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -1,76 +1,60 @@
+####################################################################
+#██╗░░██╗██╗░░░██╗██████╗░██████╗░██╗░░░░░░█████╗░███╗░░██╗██████╗░#
+#██║░░██║╚██╗░██╔╝██╔══██╗██╔══██╗██║░░░░░██╔══██╗████╗░██║██╔══██╗#
+#███████║░╚████╔╝░██████╔╝██████╔╝██║░░░░░███████║██╔██╗██║██║░░██║#
+#██╔══██║░░╚██╔╝░░██╔═══╝░██╔══██╗██║░░░░░██╔══██║██║╚████║██║░░██║#
+#██║░░██║░░░██║░░░██║░░░░░██║░░██║███████╗██║░░██║██║░╚███║██████╔╝#
+#╚═╝░░╚═╝░░░╚═╝░░░╚═╝░░░░░╚═╝░░╚═╝╚══════╝╚═╝░░╚═╝╚═╝░░╚══╝╚═════╝░#
+####################################################################
+
+#################
+### autostart ###
+#################
+
+exec-once = waybar &
+exec-once = hyprpaper &
+exec-once = swaync &
+exec-once = hypridle &
+
 ################
-### MONITORS ###
+### monitors ###
 ################
 
-# See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,1920x1080,auto,1.2
 
-###################
-### MY PROGRAMS ###
-###################
+#########################
+### program variables ###
+#########################
 
 # Set programs that you use
 $terminal = kitty
 $fileManager = nemo
 $menu = wofi --show drun
 
-
-#################
-### AUTOSTART ###
-#################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-exec-once = waybar &
-exec-once = hyprpaper &
-exec-once = swaync &
-exec-once = hypridle &
-
 #############################
-### ENVIRONMENT VARIABLES ###
+### environment variables ###
 #############################
-
-# See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-
 #####################
-### LOOK AND FEEL ###
+### look and feel ###
 #####################
 
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
     gaps_out = 10
-
     border_size = 1
-
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgb(7aa2f7)
-    # col.inactive_border = rgb(1a1b26)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
-
     layout = master
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     rounding = 10
 
-    # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
@@ -79,7 +63,6 @@ decoration {
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
         size = 3
@@ -89,11 +72,8 @@ decoration {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = true
-
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
@@ -105,31 +85,21 @@ animations {
     animation = workspaces, 1, 6, default
 }
 
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
-}
-
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
     new_status = slave
     no_gaps_when_only = 1
     mfact = 0.50
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
-
 #############
-### INPUT ###
+### input ###
 #############
 
-# https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us
     kb_variant =
@@ -148,24 +118,19 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
     workspace_swipe = true
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
 }
 
-
 ###################
-### KEYBINDINGS ###
+### keybindings ###
 ###################
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # System
@@ -178,6 +143,8 @@ bind = $mainMod, space, exec, $menu
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, exec, firefox
+
+# Window control
 
 bind = $mainMod, S, togglefloating,
 bind = $mainMod, A, fullscreen, 0
@@ -239,7 +206,7 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 ##############################
-### WINDOWS AND WORKSPACES ###
+### windows and workspaces ###
 ##############################
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
