--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,14 +1,20 @@
-set -g prefix C-s
+set -g prefix C-f
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
+unbind ,
+unbind .
 
 set-option -g status-position top
+set -g base-index 1
 set -g default-terminal "tmux-256color"
 
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
+bind-key , previous-window
+bind-key . next-window
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -19,8 +25,13 @@ set -g @catppuccin_flavor 'macchiato' # latte, frappe, macchiato or mocha
 
 run ~/.config/tmux/plugins/tmux/catppuccin.tmux
 
+set -g @catppuccin_status_connect_separator "yes"
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_window_number_position "right"
+
 set -g status-right-length 100
 set -g status-left-length 100
+set -g status-left ""
 set -g status-left "#{E:@catppuccin_status_session}"
 set -g status-right "#{E:@catppuccin_status_application}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
