--- a/i3/config
+++ b/i3/config
@@ -30,7 +30,7 @@ smart_gaps on
 bindsym $mod+Control+q kill
 bindsym --release Caps_Lock exec --no-startup-id pkill -SIGRTMIN+10 i3blocks
 bindsym $mod+space exec --no-startup-id rofi -show drun -drun-display-format \{name\}
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec --no-startup-id wezterm
 bindsym $mod+w exec firefox
 bindsym $mod+Control+w exec firefox --private-window
 bindsym $mod+e exec nemo
