--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -111,7 +111,7 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     force_no_accel = false
-    accel_profile = "adaptive" #flat
+    accel_profile = "flat" 
 
     touchpad {
         natural_scroll = false
@@ -127,7 +127,7 @@ gestures {
 
 device {
     name = logi-m240-mouse
-    sensitivity = -0.8
+    sensitivity = -0.7
 }
 
 ###################
@@ -157,6 +157,12 @@ bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+# Move window with focus
+bind = $mainMod CONTROL, h, movewindow, l
+bind = $mainMod CONTROL, j, movewindow, d
+bind = $mainMod CONTROL, k, movewindow, u
+bind = $mainMod CONTROL, l, movewindow, r
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
