--- a/i3/config
+++ b/i3/config
@@ -214,3 +214,4 @@ exec --no-startup-id nitrogen --restore &
 exec --no-startup-id xfce4-power-manager &
 exec --no-startup-id flameshot &
 exec --no-startup-id discord --start-minimized &
+exec --no-startup-id numlockx on
